fix initiative tracker scrollbar height

--- a/src/components/Layout/GameRoom/GameRoom.module.css
+++ b/src/components/Layout/GameRoom/GameRoom.module.css
@@ -37,10 +37,11 @@
   padding-inline-start: 0;
   border: 2px solid black;
   width: 90%;
-  height: 50vh;
-  overflow: hidden;
+  margin-bottom: 50px;
+  overflow: auto;
   overflow-y: scroll;
 }
+
 
 li:nth-child(2n) {
   background-color: aliceblue;
